--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,16 @@
 <resources>
     <string name="app_name">Earthquake Tracker</string>
+    <string name="error_message">Oops! There was an error.  Please try again.</string>
+    
+    <!-- Information to be displayed for each earthquake -->
+
+    <!-- Date/time will assume user is in US -->
+    <string name="date">Date</string>
+    <string name="time">Time</string>
+
+    <!-- Location of the earthquake using latitude / longitude -->
+    <string name="coordinates">Location</string>
+
+    <!-- Magnitude -->
+    <string name="magnitude">Magnitude</string>
 </resources>
